@@ -1,3 +1,9 @@
+2007-06-26  Vincent Untz  <vuntz@gnome.org>
+
+	* Makefile.am: add LIBPANEL_APPLET_CFLAGS to make compilation work. It
+	seems some pkgconfig file changed, and we didn't have the bonobo
+	headers anymore...
+
 ==================== 2.19.4 ====================
 
 2007-06-14  Vincent Untz  <vuntz@gnome.org>
